--- a/config/database.yml
+++ b/config/database.yml
@@ -12,9 +12,10 @@ default: &default
 
 development:
   <<: *default
-  database: c9
-  username: <%=ENV['C9_USER']%>
-  host: <%=ENV['IP']%>
+  database: orotter_dev
+  username: <%=ENV['DB_USER']%>
+  password: <%=ENV['DB_PASSWORD']%>
+  host: <%=ENV['DB_HOST']%>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
