--- a/config/database.yml
+++ b/config/database.yml
@@ -26,4 +26,7 @@ test:
 
 production:
   <<: *default
-  database: orotter_prod
+  adapter: postgresql
+  host: postgres://nmgapqsxtaxbla:ONavx7K6UTvsB1iVlARQEKAamF@ec2-50-17-253-74.compute-1.amazonaws.com:5432/da1vuthlura9i7
+  encoding: utf8
+  pool: 5
